# g1_gazebo

./: .gitignore  .gitmodules  CLAUDE.md  README.md  VELOCITY_CONTROL.md  roadmap.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.devcontainer/patches/: kobuki-camera-optional.patch
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/launch/: g1_description.launch.py
src/g1_description/urdf/: g1.urdf  g1_gazebo.urdf.xacro
src/g1_gazebo/: CMakeLists.txt  package.xml
src/g1_gazebo/config/: g1_controllers.yaml
src/g1_gazebo/config/bridge/: g1_bridge.yaml
src/g1_gazebo/launch/: g1_gazebo.launch.py  kobuki_gazebo.launch.py
src/g1_interfaces/: CMakeLists.txt  package.xml
src/g1_interfaces/srv/: ComputeTrajectory.srv
src/g1_task/: package.xml  setup.cfg  setup.py
src/g1_task/config/: g1_ik_debug.rviz  ik_params.yaml
src/g1_task/g1_task/: ik_service.py  joint_trajectory_test.py  joy_input.py  task_sequencer.py  teleop.py
src/g1_task/launch/: g1_full.launch.py  g1_task.launch.py  ik.launch.py  sim.launch.py  teleop.launch.py
