<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_gazebo</name>
  <version>0.1.0</version>
  <description>Unitree G1 Gazebo Harmonic simulation package</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>g1_description</depend>
  <depend>g1_scripts</depend>
  <depend>gz_ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>kobuki</depend>
  <depend>nav2_bringup</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
