<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_task</name>
  <version>0.0.0</version>
  <description>Task/demo level orchestration for G1 test project</description>
  <maintainer email="adamlwatts@msn.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_index_python</depend>
  <depend>control_msgs</depend>
  <depend>g1_description</depend>
  <depend>g1_gazebo</depend>
  <depend>g1_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser_py</depend>
  <depend>python_orocos_kdl_vendor</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
